--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -5,13 +5,14 @@
   "main": "src/index.js",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 --tab-width 2 --jsx-bracket-same-line \"src/**/*.{ts, tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "start": "webpack serve --port 3000 --host 0.0.0.0 --live-reload --color --mode development",
-    "watch": "webpack --watch --mode development --live-reload -d --color",
-    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production --progress",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "playwright test --workers 1 --trace on"
   },
   "dependencies": {
@@ -67,14 +68,7 @@
     "xstate": "^4.38.3"
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
-    "@babel/eslint-parser": "^7.23.10",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-react": "7.23.3",
     "@playwright/test": "^1.42.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/jquery": "^3.5.29",
     "@types/js-md5": "^0.7.2",
     "@types/node": "^20.11.23",
@@ -84,32 +78,17 @@
     "@types/react-table": "^7.7.19",
     "@types/set-value": "^4.0.3",
     "@types/swagger-ui-dist": "^3.30.4",
-    "babel-loader": "9.1.3",
-    "buffer": "^6.0.3",
-    "compression-webpack-plugin": "11.0.0",
-    "crypto-browserify": "^3.12.0",
-    "css-loader": "6.10.0",
-    "css-minimizer-webpack-plugin": "6.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.56.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
-    "file-loader": "6.2.0",
-    "mini-css-extract-plugin": "2.8.0",
-    "path-browserify": "^1.0.1",
     "prettier": "3.2.5",
-    "raw-loader": "4.0.2",
-    "react-refresh": "^0.14.0",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.70.0",
     "sass-loader": "14.1.0",
-    "stream-browserify": "3.0.0",
-    "style-loader": "3.3.4",
-    "ts-loader": "^9.5.1",
-    "ts-migrate": "^0.1.35",
     "typescript": "^5.3.3",
-    "url-loader": "4.1.1",
-    "webpack": "5.90.1",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "vite": "^5.2.11",
+    "vite-plugin-simple-html": "^0.1.2"
   }
 }
