wip migration to vitejs

--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "playwright test --workers 1 --trace on"
   },
