--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build && mkdir -p ../public/assets && rm -rf ../public/assets/* && rm ../public/index.html &&  cp -r ./dist/* ../public/",
     "preview": "vite preview",
     "test": "playwright test --workers 1 --trace on"
   },
