--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ cli/cms
 cli/cms2
 cli/testcms
 cli/coucou
-/public/assets/
-/public/index.html
+daikoku/public/assets/
+daikoku/public/index.html
 stats.html
