--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
+    "@asyncapi/react-component": "^2.1.0",
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
