--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
-    "@asyncapi/react-component": "^2.1.0",
+    "@asyncapi/react-component": "^2.0.1",
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
@@ -28,9 +28,10 @@
     "@tanstack/react-table": "^8.12.0",
     "@xstate/react": "3.2.2",
     "antd": "5.14.1",
-    "asciidoctor": "3.0.4",
+    "asciidoctor": "^3.0.4",
     "bootstrap": "^5.3.2",
     "brace": "^0.11.1",
+    "buffer": "^6.0.3",
     "classnames": "2.5.1",
     "dayjs": "1.11.10",
     "es6-shim": "0.35.8",
@@ -64,11 +65,12 @@
     "set-value": "4.1.0",
     "showdown": "2.1.0",
     "sonner": "^1.4.0",
-    "swagger-editor": "^4.12.2",
     "swagger-ui-dist": "5.17.12",
+    "util": "^0.12.5",
     "xstate": "^4.38.3"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@playwright/test": "^1.42.0",
     "@types/jquery": "^3.5.29",
     "@types/js-md5": "^0.7.2",
@@ -85,6 +87,7 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "3.2.5",
     "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.70.0",
     "sass-loader": "14.1.0",
