--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,6 +24,7 @@ hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
 tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["json"] }
 serde_json = "1.0.107"
 lazy_static = "1.4.0"
 serde = { version = "1.0.189", features = ["derive"] }
