wip - use right panel to display some forms to update api

--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -53,6 +53,7 @@
     "react-feather": "2.0.10",
     "react-modal": "3.16.1",
     "react-paginate": "8.2.0",
+    "react-resizable-panels": "^2.1.4",
     "react-router-dom": "6.25.1",
     "react-select": "5.8.0",
     "react-step-wizard": "5.3.11",
