--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -37,6 +37,7 @@
     "es6-shim": "0.35.8",
     "get-value": "3.0.1",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "highlight.js": "11.10.0",
     "history": "^5.3.0",
     "jquery": "3.7.1",
