--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.2.0
+    - uses: actions/checkout@v4
     # setup java to use sbt (?)
     - name: Set up JDK 21
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '21'
+    - uses: sbt/setup-sbt@v1
     - uses: coursier/cache-action@v5
     # install node lts
     - name: setup node
