--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,13 +26,14 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v2.2.0
+    - uses: actions/checkout@v4
     # setup java to use sbt
     - name: Set up JDK 21
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '21'
+    - uses: sbt/setup-sbt@v1
     #test DK
     - uses: coursier/cache-action@v6
     - name: test
