new front office tests

--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -1,11 +1,11 @@
 name: Playwright tests
-on: 
-  push:
-    paths:
-      - 'daikoku/app/**'
-      - 'daikoku/javascript/**'
-      - '.github/workflows/front-office-tests.yml'
-  workflow_dispatch:
+# on: 
+#   push:
+#     paths:
+#       - 'daikoku/app/**'
+#       - 'daikoku/javascript/**'
+#       - '.github/workflows/front-office-tests.yml'
+#   workflow_dispatch:
   
 jobs:
   playwright-run:
