--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.1",
     "@asyncapi/react-component": "^2.2.0",
-    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
     "@fortawesome/fontawesome-free": "6.6.0",
