--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -54,7 +54,7 @@
     "react-modal": "3.16.1",
     "react-paginate": "8.2.0",
     "react-resizable-panels": "^2.1.4",
-    "react-router-dom": "7.4.1",
+    "react-router-dom": "^7.5.2",
     "react-select": "5.8.0",
     "react-step-wizard": "5.3.11",
     "react-tooltip": "5.27.1",
