Add some doc about notification purge job

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -155,6 +155,21 @@ daikoku {
       max.date = ${?DAIKOKU_AUDIT_PURGE_MAX_DATE}
     }
   }
+
+  notifications {
+    purge {
+      cron = true
+      cron = ${?DAIKOKU_NOTIFICATIONS_PURGE_CRON}
+      interval = 1hour
+      interval = ${?DAIKOKU_NOTIFICATIONS_PURGE_INTERVAL}
+      max.to.treat.date = 180days
+      max.to.treat.date = ${?DAIKOKU_NOTIFICATIONS_PURGE_MAX_DATE}
+      max.base.date = 30days
+      max.base.date = ${?DAIKOKU_NOTIFICATIONS_PURGE_MAX_DATE}
+    }
+  }
+
+
 }
 
 mongodb {
