--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.3.7",
     "brace": "^0.11.1",
     "buffer": "^6.0.3",
+    "cbor2": "^2.0.1",
     "classnames": "2.5.1",
     "es6-shim": "0.35.8",
     "get-value": "4.0.1",
