#869 - change useSsl with Option[Boolean] to keep the old conf working

--- a/daikoku/javascript/tests/docker-compose.yml
+++ b/daikoku/javascript/tests/docker-compose.yml
@@ -84,7 +84,7 @@ services:
      - openldap
 
   otoroshi:
-    image: maif/otoroshi:16.22.0
+    image: maif/otoroshi:latest
     networks:
       - basicsetup
     environment:
