use latest version of otorshi in playwright local tests

--- a/daikoku/javascript/tests/docker-compose-local.yml
+++ b/daikoku/javascript/tests/docker-compose-local.yml
@@ -84,7 +84,7 @@ services:
   #    - openldap
 
   otoroshi:
-    image: maif/otoroshi:otoroshi
+    image: maif/otoroshi:latest
     networks:
       - basicsetup
     environment:
