FIX #926 - rework url construction to get real scheme

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -16,6 +16,9 @@ daikoku {
   containerized = false
   containerized = ${?IS_CONTAINERIZED}
 
+  ssl.enabled = false
+  ssl.enabled = ${?DAIKOKU_SSL_ENABLED}
+
   anonymous-reporting {
       enabled = true
       enabled = ${?DAIKOKU_ANONYMOUS_REPORTING_ENABLED}
