FIX #926 - remove default conf for sslEnabled

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -16,7 +16,6 @@ daikoku {
   containerized = false
   containerized = ${?IS_CONTAINERIZED}
 
-  ssl.enabled = false
   ssl.enabled = ${?DAIKOKU_SSL_ENABLED}
 
   anonymous-reporting {
@@ -183,7 +182,7 @@ mongodb {
 
 http.port = 8080
 http.port = ${?PORT}
-https.port = disabled
+https.port = 443
 https.port = ${?HTTPS_PORT}
 http2.enabled = no
 http2.enabled = ${?HTTP2_ENABLED}
