FIX #926 - remove default conf for sslEnabled -- again

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -182,65 +182,63 @@ mongodb {
 
 http.port = 8080
 http.port = ${?PORT}
-https.port = 443
 https.port = ${?HTTPS_PORT}
-http2.enabled = no
+http2.enabled = noplay {
+                    application.loader = "fr.maif.otoroshi.daikoku.DaikokuLoader"
+                    i18n.langs=[ "en" , "fr" ]
+                    modules {}
+                    filters {
+                      enabled = []
+                    }
+                    http {
+                      filters = play.api.http.NoHttpFilters
+                      parser = {
+                        maxMemoryBuffer=2MB
+                      }
+                      secret {
+                        key = "snTgnSr806O%yII^mIYn@m!c8q#nVTdv9go%5swCyw4$!wxDqU41gI&iCb^HPMY2"
+                        key = ${?PLAY_CRYPTO_SECRET}
+                      }
+                      session = {
+                        cookieName = "daikoku-session"
+                        cookieName = ${?DAIKOKU_SESSION_NAME}
+                        secure = false
+                        secure = ${?DAIKOKU_SESSION_SECURE}
+                        maxAge = 259200000
+                        maxAge = ${?DAIKOKU_SESSION_MAXAGE}
+                        httpOnly = true
+                        httpOnly = ${?DAIKOKU_SESSION_HTTPONLY}
+                        sameSite = "lax"
+                        sameSite = ${?DAIKOKU_SESSION_SAMESITE}
+                        domain = null
+                        domain = ${?DAIKOKU_SESSION_DOMAIN}
+                        path = ${play.http.context}
+                        jwt {
+                          signatureAlgorithm = "HS256"
+                          expiresAfter = ${play.http.session.maxAge}
+                          clockSkew = 5 minutes
+                          dataClaim = "data"
+                        }
+                      }
+                    }
+                    server {
+                      pekko {
+                        requestTimeout = 60s
+                      }
+                      http {
+                        port = ${http.port}
+                        idleTimeout = 60s
+                      }
+                      https {
+                        port = ${https.port}
+                        keyStore {
+                          path=${?HTTPS_KEYSTORE_PATH}
+                          type=${?HTTPS_KEYSTORE_TYPE}
+                          password=${?HTTPS_KEYSTORE_PASSWORD}
+                          algorithm=${?HTTPS_KEYSTORE_ALGO}
+                        }
+                      }
+                    }
+                  }
 http2.enabled = ${?HTTP2_ENABLED}
 
-play {
-  application.loader = "fr.maif.otoroshi.daikoku.DaikokuLoader"
-  i18n.langs=[ "en" , "fr" ]
-  modules {}
-  filters {
-    enabled = []
-  }
-  http {
-    filters = play.api.http.NoHttpFilters
-    parser = {
-      maxMemoryBuffer=2MB
-    }
-    secret {
-      key = "snTgnSr806O%yII^mIYn@m!c8q#nVTdv9go%5swCyw4$!wxDqU41gI&iCb^HPMY2"
-      key = ${?PLAY_CRYPTO_SECRET}
-    }
-    session = {
-      cookieName = "daikoku-session"
-      cookieName = ${?DAIKOKU_SESSION_NAME}
-      secure = false
-      secure = ${?DAIKOKU_SESSION_SECURE}
-      maxAge = 259200000
-      maxAge = ${?DAIKOKU_SESSION_MAXAGE}
-      httpOnly = true
-      httpOnly = ${?DAIKOKU_SESSION_HTTPONLY}
-      sameSite = "lax"
-      sameSite = ${?DAIKOKU_SESSION_SAMESITE}
-      domain = null
-      domain = ${?DAIKOKU_SESSION_DOMAIN}
-      path = ${play.http.context}
-      jwt {
-        signatureAlgorithm = "HS256"
-        expiresAfter = ${play.http.session.maxAge}
-        clockSkew = 5 minutes
-        dataClaim = "data"
-      }
-    }
-  }
-  server {
-    pekko {
-      requestTimeout = 60s
-    }
-    http {
-      port = ${http.port}
-      idleTimeout = 60s
-    }
-    https {
-      port = ${https.port}
-      keyStore {
-        path=${?HTTPS_KEYSTORE_PATH}
-        type=${?HTTPS_KEYSTORE_TYPE}
-        password=${?HTTPS_KEYSTORE_PASSWORD}
-        algorithm=${?HTTPS_KEYSTORE_ALGO}
-      }
-    }
-  }
-}
