--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -36,6 +36,10 @@ jobs:
             os: macOS-latest
             target: aarch64-apple-darwin
             bin: daikoku-darwin-arm64
+          - os_name: Linux-x86_64-musl
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            bin: daikoku-linux-amd64-musl
         toolchain:
           - stable
     steps:
