--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -49,6 +49,7 @@ slug = "0.1.5"
 regex = "1.11.1"
 zip = "2.2.1"
 mime_guess = "2.0.5"
+openssl = { version = "0.10.75", features = ["vendored"] }
 
 [dependencies.uuid]
 version = "1.7.0"
