--- a/daikoku/.scalafmt.conf
+++ b/daikoku/.scalafmt.conf
@@ -1,2 +1,14 @@
-version = 2.5.0
-align.openParenCallSite = false
+version = 2.7.5
+
+style = defaultWithAlign
+
+align                      = most
+danglingParentheses        = true
+docstrings                 = JavaDoc
+indentOperator             = spray
+maxColumn                  = 120
+rewrite.rules              = [RedundantParens, SortImports]
+unindentTopLevelOperators  = true
+
+# rewrite.rules = [SortImports]
+ 
