wip - scala code is ok

--- a/daikoku/.scalafmt.conf
+++ b/daikoku/.scalafmt.conf
@@ -1,2 +1,9 @@
-version = 2.5.0
+version = 3.8.3
+runner.dialect = scala213
+
+# Conserver le comportement existant
 align.openParenCallSite = false
+
+# Fichiers à inclure/exclure
+project.git = true
+project.excludeFilters = ["target/"]
