--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,37 +42,37 @@ jobs:
           sbt 'docker:publishLocal'
 
       # ---- LDAP tests ----
-      - name: Start LDAP environment
-        uses: hoverkraft-tech/compose-action@v2.2.0
-        with:
-          compose-file: "./daikoku/javascript/tests/docker-compose.yml"
+      # - name: Start LDAP environment
+      #   uses: hoverkraft-tech/compose-action@v2.2.0
+      #   with:
+      #     compose-file: "./daikoku/javascript/tests/docker-compose.yml"
 
-      - name: Wait for API to be ready (LDAP)
-        run: |
-          echo "Waiting for API to be up..."
-          until curl --silent --fail http://localhost:13200/health; do
-            printf '.'
-            sleep 2
-          done
-          echo "API is ready!"
+      # - name: Wait for API to be ready (LDAP)
+      #   run: |
+      #     echo "Waiting for API to be up..."
+      #     until curl --silent --fail http://localhost:13200/health; do
+      #       printf '.'
+      #       sleep 2
+      #     done
+      #     echo "API is ready!"
 
-      - name: Install Playwright
-        run: |
-          cd ./daikoku/javascript/tests
-          npm ci
-          npx playwright install --with-deps chromium
+      # - name: Install Playwright
+      #   run: |
+      #     cd ./daikoku/javascript/tests
+      #     npm ci
+      #     npx playwright install --with-deps chromium
 
-      - name: Run Playwright tests (LDAP)
-        run: |
-          cd ./daikoku/javascript/tests
-          npx playwright test --project chromium
-        env:
-          CI: true
-          EXPOSED_PORT: 13200
+      # - name: Run Playwright tests (LDAP)
+      #   run: |
+      #     cd ./daikoku/javascript/tests
+      #     npx playwright test --project chromium
+      #   env:
+      #     CI: true
+      #     EXPOSED_PORT: 13200
 
-      - name: Stop LDAP environment
-        run: |
-          docker compose -f ./daikoku/javascript/tests/docker-compose.yml down -v
+      # - name: Stop LDAP environment
+      #   run: |
+      #     docker compose -f ./daikoku/javascript/tests/docker-compose.yml down -v
 
       # ---- OIDC tests ----
       - name: Start OIDC environment
@@ -88,6 +88,14 @@ jobs:
             sleep 2
           done
           echo "OIDC server is ready!"
+      - name: Wait for API to be ready (OIDC)
+        run: |
+          echo "Waiting for API to be up..."
+          until curl --silent --fail http://localhost:13200/health; do
+            printf '.'
+            sleep 2
+          done
+          echo "API is ready!"
           
       - name: Run Playwright tests (OIDC)
         run: |
