new build actions for snapshot

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,6 +10,7 @@ on:
       - 'daikoku/javascript/src/**'
       - 'daikoku/javascript/package.json'
       - 'daikoku/javascript/package-lock.json'
+      - '.github/workflows/build-docker.yml'
   workflow_dispatch:
 
 env:
