--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,10 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
     - uses: sbt/setup-sbt@v1
+    - name: Debug Docker
+      run: |
+        docker version
+        docker info
     #test DK
     - uses: coursier/cache-action@v6
     - name: test
