better tests package

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -185,7 +185,7 @@ http.port = ${?PORT}
 https.port = ${?HTTPS_PORT}
 http2.enabled = no
 play {
-  application.loader = "fr.maif.daikoku"
+  application.loader = "fr.maif.DaikokuApplicationLoader"
   i18n.langs=[ "en" , "fr" ]
   modules {}
   filters {
