--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -46,9 +46,9 @@
     "object-hash": "^3.0.0",
     "popper.js": "1.16.1",
     "rc-util": "^5.44.4",
-    "react": "19.2.4",
+    "react": "^19.1.1",
     "react-color": "2.19.3",
-    "react-dom": "19.2.4",
+    "react-dom": "^19.1.1",
     "react-feather": "2.0.10",
     "react-modal": "3.16.3",
     "react-paginate": "8.3.0",
