--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -84,6 +84,7 @@
     "prettier": "3.8.1",
     "rollup-plugin-visualizer": "^6.0.5",
     "sass": "^1.97.3",
+    "terser": "^5.46.0",
     "typescript": "^5.9.3",
     "vite": "7.3.1",
     "vite-plugin-simple-html": "^1.1.0"
