test otoroshi synchronization

--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -5,6 +5,12 @@ daikoku {
   signingKey = "secret"
   storage = "postgres"
 
+  otoroshi {
+    sync {
+      cron = true
+    }
+  }
+
   postgres {
     database = "daikoku_test"
     poolSize = 4
